# yantra

./: .eslintrc.json  .gitignore  AGENTIC_CAPABILITIES_SUMMARY.md  AGENTIC_CAPABILITIES_TRACKER.md  AGENT_COMMANDS.md  Admin_Guide.md  Agentic_Primitives_Status_20251209.xlsx  CHAT_RESILIENCE_BRAINSTORM.md  COMPREHENSIVE_STATUS_AUDIT.md  DEPENDENCY_TRACKING_ANALYSIS.md  DEPENDENCY_TRACKING_SUMMARY.md  Decision_Log.md  FILE_TRANSACTION_IMPLEMENTATION.md  Features.md  File_Registry.md  GNN_VERIFICATION_DETAILED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md.backup  IMPLEMENTATION_STATUS.md.bak2  IMPLEMENTATION_VERIFICATION_REPORT.md  Integration_Test_Results.md  Known_Issues.md  NEXT_STEPS_IMPLEMENTATION_SUMMARY.md  PRIMITIVES_COMPARISON.md  PRIMITIVES_STATUS.md  PRIMITIVES_UPDATE_SUMMARY.md  Project_Plan.md  REQUIREMENTS_UPDATE_Nov28_2025.md  Regression_Test_Results.md  SPECIFICATIONS_COMPARISON_REPORT.md  Specifications.md  TEST_EXECUTION_ENHANCEMENT_SUMMARY.md  Technical_Guide.md  Test_Results.md  UX.md  UX_IMPROVEMENTS_DEC9.md  Unit_Test_Results.md  Unit_Test_Results_old.md  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  (+18 more)
.github/: Architecture_Compilation_Fixes_Needed.md  Session_Handoff.md  (+31 more)
src-tauri/: Cargo.toml  add_snippet_extraction.py  fix_all_codenodes.py  fix_codenodes.py  tauri.conf.json  test  test_semantic_gnn.py
src-tauri/.cargo/: config.toml
src-tauri/examples/: test_gnn_tracking.rs
src-tauri/icons/: create_icons.sh  create_yantra_icon.sh  icon.icns
src-tauri/src/: lib.rs  main.rs  tests.rs  ydoc_commands.rs
src-tauri/src/agent/: affected_tests.rs  api_health.rs  api_manager.rs  code_validation.rs  command_classifier.rs  confidence.rs  conflict_detector.rs  conversation_integration.rs  conversation_memory.rs  conversation_semantic_search.rs  dependencies.rs  dependency_manager.rs  deployment.rs  document_readers.rs  environment.rs  execution.rs  file_editor.rs  file_ops.rs  file_transaction.rs  intelligent_executor.rs  mod.rs  monitoring.rs  multi_project.rs  orchestrator.rs  packaging.rs  project_initializer.rs  project_orchestrator.rs  secrets.rs  state.rs  status_emitter.rs  task_queue.rs  terminal.rs  validation.rs
src-tauri/src/agent/api_monitor/: contract_validator.rs  mod.rs  spec_parser.rs
src-tauri/src/agent/database/: connection_manager.rs  migration_manager.rs  mod.rs  schema_tracker.rs
src-tauri/src/agent/http_client/: mod.rs
src-tauri/src/architecture/: analyzer.rs  commands.rs  commands.rs.bak  commands.rs.bak2  commands_check.rs  deviation_detector.rs  generator.rs  mod.rs  refactoring.rs  storage.rs  types.rs
src-tauri/src/bridge/: bench.rs  mod.rs  pyo3_bridge.rs
src-tauri/src/browser/: cdp.rs  mod.rs  validator.rs
src-tauri/src/code_intelligence/: ast_parser.rs  mod.rs  reference_finder.rs  scope_analyzer.rs  symbol_extractor.rs
src-tauri/src/documentation/: extractor.rs  mod.rs
src-tauri/src/git/: commit.rs  mcp.rs  mod.rs
src-tauri/src/gnn/: auto_refresh.rs  completion.rs  embeddings.rs  features.rs  file_watcher.rs  graph.rs  hnsw_index.rs  incremental.rs  mod.rs  package_tracker.rs  parser.rs  parser_c.rs  parser_cpp.rs  parser_go.rs  parser_java.rs  parser_js.rs  parser_kotlin.rs  parser_php.rs  parser_ruby.rs  parser_rust.rs  parser_swift.rs  persistence.rs  query.rs  version_tracker.rs
src-tauri/src/graph/: file_watcher.rs
src-tauri/src/llm/: chroma_client.rs  claude.rs  config.rs  context.rs  context_depth.rs  gemini.rs  groq.rs  mod.rs  models.rs  openai.rs  openrouter.rs  orchestrator.rs  prompts.rs  rag.rs  tokens.rs
src-tauri/src/security/: autofix.rs  mod.rs  semgrep.rs
src-tauri/src/terminal/: executor.rs  mod.rs  pty_terminal.rs
src-tauri/src/testing/: executor.rs  executor_js.rs  executor_unified.rs  generator.rs  generator_js.rs  generator_unified.rs  mod.rs  retry.rs  runner.rs
src-tauri/src/ydoc/: database.rs  file_ops.rs  manager.rs  mod.rs  parser.rs  traceability.rs
src-tauri/tests/: gnn_integration_test.rs  gnn_test_tracking_test.rs  integration_orchestrator_test_gen.rs  multilang_parser_test.rs  package_tracker_integration_test.rs  real_world_test.rs  unit_test_generation_integration.rs
src-tauri/tests/integration/: deployment_tests.rs  execution_tests.rs  mod.rs  packaging_tests.rs
(+173 files in other folders)
