[package]
name = "yantra"
version = "0.1.0"
description = "AI-first development platform that generates code that never breaks"
authors = ["Yantra Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-file", "fs-read-dir", "fs-exists", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
petgraph = "0.6"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
