[package]
name = "yantra"
version = "0.1.0"
description = "AI-first development platform that generates code that never breaks"
authors = ["Yantra Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-file", "fs-read-dir", "fs-exists", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tree-sitter = "0.22"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.22"
tree-sitter-swift = "0.6"
tree-sitter-kotlin = "0.3"
petgraph = "0.6"
rusqlite = { version = "0.30.0", features = ["bundled", "backup"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "cookies", "stream"] }
tiktoken-rs = "0.5"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
dirs = "6.0.0"
portable-pty = "0.8"
base64 = "0.22"
parking_lot = "0.12"
fastembed = "5.3"
hnsw_rs = "0.3"

# Database connections
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "uuid"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
r2d2 = "0.8"  # Connection pooling
r2d2_postgres = "0.18"
r2d2_sqlite = "0.23"  # SQLite connection pooling (compatible with rusqlite 0.30)

# Document readers
docx-rs = "0.4"
lopdf = "0.32"  # PDF parser (more stable than pdf-extract)

# Browser automation
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false }

# Security & encryption
ring = "0.17"
aes-gcm = "0.10"

# HTTP client enhancements
governor = "0.6"  # Rate limiting
tower = { version = "0.4", features = ["timeout", "limit", "retry", "buffer"] }

# API spec parsing
serde_yaml = "0.9"
openapiv3 = "2.0"

# File system utilities
walkdir = "2.4"
glob = "0.3"
notify = "6.1"  # File system watcher

# Async runtime
futures = "0.3"

# Utilities
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
regex = "1.10"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

